sandbox/output
StrategyFactory.java:5: error: missing return statement
    }
    ^
1 error
